Fixed z-index

--- a/source-code/css/search-results.css
+++ b/source-code/css/search-results.css
@@ -84,7 +84,7 @@ div > img{
 
 .follow {
     position: relative;
-    z-index: 9999;
+    z-index: 300;
 }
 
 .nav > li > a.active{
